--- a/src/main/ShoppingCartItem/ShoppingCartItem.fxml
+++ b/src/main/ShoppingCartItem/ShoppingCartItem.fxml
@@ -7,34 +7,37 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root fx:id="shuoppingCardItem" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="74.0" prefWidth="200.0" style="-fx-background-color: pink;" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="shuoppingCardItem" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="74.0" prefWidth="230.0" style="-fx-background-color: pink;" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="productNameLabel" layoutX="58.0" layoutY="9.0" prefHeight="25.0" prefWidth="70.0" text="Paprika">
+      <Label fx:id="productNameLabel" layoutX="62.0" layoutY="-4.0" prefHeight="47.0" prefWidth="126.0" text="Ekologisk blandfärs" wrapText="true">
          <font>
             <Font size="14.0" />
          </font></Label>
-      <ImageView fx:id="itemImage" fitHeight="57.0" fitWidth="70.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="itemImage" fitHeight="57.0" fitWidth="70.0" layoutX="2.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/chick.png" />
          </image></ImageView>
-      <Label fx:id="priceLabel" alignment="CENTER" layoutX="150.0" layoutY="42.0" prefHeight="25.0" prefWidth="45.0" text="kr" textAlignment="RIGHT" />
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="55.0" layoutY="40.0" onMouseClicked="#onMinusButtonPressed" pickOnBounds="true" preserveRatio="true">
+      <Label fx:id="priceLabel" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="171.0" layoutY="42.0" prefHeight="25.0" prefWidth="57.0" text="kr" textAlignment="CENTER" underline="true">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="64.0" layoutY="40.0" onMouseClicked="#onMinusButtonPressed" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/minus.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="118.0" layoutY="40.0" onMouseClicked="#onPlusButtonPressed" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="143.0" layoutY="40.0" onMouseClicked="#onPlusButtonPressed" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/plus.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="paperBinImage" fitHeight="25.0" fitWidth="25.0" layoutX="161.0" layoutY="13.0" onMouseClicked="#onPaperbinPressed" onMouseEntered="#onPaperBinEnter" onMouseExited="#onPaperBinExit" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="paperBinImage" fitHeight="25.0" fitWidth="25.0" layoutX="197.0" layoutY="13.0" onMouseClicked="#onPaperbinPressed" onMouseEntered="#onPaperBinEnter" onMouseExited="#onPaperBinExit" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/paperbin.png" />
          </image>
       </ImageView>
-      <Label layoutX="154.0" layoutY="-2.0" text="Ta bort" />
-      <TextField fx:id="amountTextField" layoutX="82.0" layoutY="40.0" prefHeight="29.0" prefWidth="33.0">
+      <Label layoutX="190.0" layoutY="-2.0" text="Ta bort" />
+      <TextField fx:id="amountTextField" layoutX="90.0" layoutY="40.0" prefHeight="29.0" prefWidth="51.0">
          <font>
             <Font size="13.0" />
          </font>
