--- a/src/main/ShoppingCartItem/ShoppingCartItem.fxml
+++ b/src/main/ShoppingCartItem/ShoppingCartItem.fxml
@@ -7,26 +7,26 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root fx:id="shuoppingCardItem" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="74.0" prefWidth="230.0" style="-fx-background-color: pink;" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="shuoppingCardItem" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="72.0" prefWidth="230.0" style="-fx-background-color: #F3F3F3;" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="productNameLabel" layoutX="62.0" layoutY="-4.0" prefHeight="47.0" prefWidth="126.0" text="Ekologisk blandfärs" wrapText="true">
+      <Label fx:id="productNameLabel" layoutX="62.0" layoutY="-7.0" prefHeight="47.0" prefWidth="126.0" text="Ekologisk blandfärs" wrapText="true">
          <font>
             <Font size="14.0" />
          </font></Label>
-      <ImageView fx:id="itemImage" fitHeight="57.0" fitWidth="70.0" layoutX="2.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="itemImage" fitHeight="57.0" fitWidth="70.0" layoutX="2.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/chick.png" />
          </image></ImageView>
-      <Label fx:id="priceLabel" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="171.0" layoutY="42.0" prefHeight="25.0" prefWidth="57.0" text="kr" textAlignment="CENTER" underline="true">
+      <Label fx:id="priceLabel" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="171.0" layoutY="46.0" prefHeight="25.0" prefWidth="57.0" text="kr" textAlignment="CENTER" underline="true">
          <font>
             <Font size="14.0" />
          </font></Label>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="64.0" layoutY="40.0" onMouseClicked="#onMinusButtonPressed" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="62.0" layoutY="37.0" onMouseClicked="#onMinusButtonPressed" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/minus.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="143.0" layoutY="40.0" onMouseClicked="#onPlusButtonPressed" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="147.0" layoutY="37.0" onMouseClicked="#onPlusButtonPressed" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/plus.png" />
          </image>
@@ -37,7 +37,7 @@
          </image>
       </ImageView>
       <Label layoutX="190.0" layoutY="-2.0" text="Ta bort" />
-      <TextField fx:id="amountTextField" layoutX="90.0" layoutY="40.0" prefHeight="29.0" prefWidth="51.0">
+      <TextField fx:id="amountTextField" layoutX="88.0" layoutY="37.0" prefHeight="30.0" prefWidth="59.0">
          <font>
             <Font size="13.0" />
          </font>
