--- a/src/main/Product/Product.fxml
+++ b/src/main/Product/Product.fxml
@@ -24,17 +24,17 @@
                </font></Label>
             <ImageView fx:id="minusImage" fitHeight="30.0" fitWidth="30.0" layoutX="45.0" layoutY="168.0" pickOnBounds="true" preserveRatio="true" />
             <ImageView fx:id="plusImage" fitHeight="30.0" fitWidth="30.0" layoutX="100.0" layoutY="168.0" pickOnBounds="true" preserveRatio="true" />
-            <TextField fx:id="amountTextField" alignment="CENTER" layoutX="46.0" layoutY="180.0" prefHeight="29.0" prefWidth="82.0">
+            <TextField fx:id="amountTextField" alignment="CENTER" editable="false" layoutX="46.0" layoutY="180.0" prefHeight="29.0" prefWidth="82.0">
                <font>
                   <Font size="13.0" />
                </font>
             </TextField>
-            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="131.0" layoutY="174.0" onMouseClicked="#onPlusButtonPressed" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="plusImage" fitHeight="40.0" fitWidth="40.0" layoutX="131.0" layoutY="174.0" onMouseClicked="#onPlusButtonPressed" onMouseEntered="#onPlusEnter" onMouseExited="#onPlusExit" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../Res/Images/plus.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="4.0" layoutY="174.0" onMouseClicked="#onMinusButtonPressed" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="minusImage" fitHeight="40.0" fitWidth="40.0" layoutX="4.0" layoutY="174.0" onMouseClicked="#onMinusButtonPressed" onMouseEntered="#onMinusEnter" onMouseExited="#onMinusExit" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../Res/Images/minus.png" />
                </image>
