--- a/src/main/Res/styles.css
+++ b/src/main/Res/styles.css
@@ -20,3 +20,10 @@
 .gaussianBlurAndOpaque{
     -fx-background-color: pink;
 }
+
+.categoryButtonsSelected{
+    -fx-border-color: black;
+    -fx-border-width: 1px;
+    -fx-background-color: #037C99;
+    -fx-font-size: 15;
+}
