--- a/src/main/Res/styles.css
+++ b/src/main/Res/styles.css
@@ -22,6 +22,7 @@
 }
 
 .categoryButtonsSelected{
+    -fx-text-fill: white;
     -fx-border-color: black;
     -fx-border-width: 1px;
     -fx-background-color: #037C99;
