--- a/src/main/Product/Product.fxml
+++ b/src/main/Product/Product.fxml
@@ -9,12 +9,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="220.0" prefWidth="175.0" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="220.0" prefWidth="175.0" styleClass="border" stylesheets="@../Res/styles.css" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane prefHeight="220.0" prefWidth="175.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView fx:id="itemImage" fitHeight="132.0" fitWidth="175.0" onMouseClicked="#onClick" pickOnBounds="true" preserveRatio="true" />
-            <Label fx:id="itemLabel" alignment="CENTER" contentDisplay="CENTER" layoutY="126.0" prefHeight="17.0" prefWidth="175.0" text="Varunamn" textAlignment="CENTER" textOverrun="CENTER_WORD_ELLIPSIS">
+            <ImageView fx:id="itemImage" fitHeight="132.0" fitWidth="167.0" layoutX="2.0" onMouseClicked="#onClick" pickOnBounds="true" preserveRatio="true" />
+            <Label fx:id="itemLabel" alignment="CENTER" contentDisplay="CENTER" layoutY="127.0" prefHeight="17.0" prefWidth="175.0" text="Varunamn" textAlignment="CENTER" textOverrun="CENTER_WORD_ELLIPSIS">
                <font>
                   <Font size="18.0" />
                </font></Label>
@@ -22,28 +22,32 @@
                <font>
                   <Font size="16.0" />
                </font></Label>
-            <ImageView fx:id="minusImage" fitHeight="30.0" fitWidth="30.0" layoutX="45.0" layoutY="168.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="plusImage" fitHeight="30.0" fitWidth="30.0" layoutX="100.0" layoutY="168.0" pickOnBounds="true" preserveRatio="true" />
-            <TextField fx:id="amountTextField" alignment="CENTER" editable="false" layoutX="46.0" layoutY="180.0" prefHeight="29.0" prefWidth="82.0">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </TextField>
-            <ImageView fx:id="plusImage" fitHeight="40.0" fitWidth="40.0" layoutX="131.0" layoutY="174.0" onMouseClicked="#onPlusButtonPressed" onMouseEntered="#onPlusEnter" onMouseExited="#onPlusExit" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../Res/Images/plus.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="minusImage" fitHeight="40.0" fitWidth="40.0" layoutX="4.0" layoutY="174.0" onMouseClicked="#onMinusButtonPressed" onMouseEntered="#onMinusEnter" onMouseExited="#onMinusExit" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../Res/Images/minus.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="buyButton" alignment="TOP_CENTER" layoutX="4.0" layoutY="172.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#onBuyButtonPressed" prefHeight="43.0" prefWidth="167.0" style="-fx-background-color: #FF7575;" text="Köp" textAlignment="CENTER">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Button>
+            <Pane layoutX="-1.0" layoutY="172.0" prefHeight="43.0" prefWidth="171.0">
+               <children>
+                  <ImageView fx:id="minusImage" fitHeight="30.0" fitWidth="30.0" layoutX="12.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="plusImage" fitHeight="30.0" fitWidth="30.0" layoutX="130.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true" />
+                  <TextField fx:id="amountTextField" alignment="CENTER" editable="false" layoutX="45.0" layoutY="8.0" prefHeight="29.0" prefWidth="82.0">
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                  </TextField>
+                  <ImageView fx:id="plusImage" fitHeight="40.0" fitWidth="40.0" layoutX="127.0" layoutY="1.0" onMouseClicked="#onPlusButtonPressed" onMouseEntered="#onPlusEnter" onMouseExited="#onPlusExit" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Res/Images/plus.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="minusImage" fitHeight="40.0" fitWidth="40.0" layoutX="4.0" layoutY="1.0" onMouseClicked="#onMinusButtonPressed" onMouseEntered="#onMinusEnter" onMouseExited="#onMinusExit" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Res/Images/minus.png" />
+                     </image>
+                  </ImageView>
+                  <Button fx:id="buyButton" alignment="TOP_CENTER" layoutX="3.0" layoutY="-1.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#onBuyButtonPressed" prefHeight="43.0" prefWidth="167.0" style="-fx-background-color: #FF7575;" text="Köp" textAlignment="CENTER">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Button>
+               </children>
+            </Pane>
          </children>
       </Pane>
    </children>
