--- a/src/main/HomePage.fxml
+++ b/src/main/HomePage.fxml
@@ -98,26 +98,54 @@
                      <children>
                         <Pane prefHeight="58.0" prefWidth="569.0" style="-fx-background-color: white;" styleClass="border" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <ImageView fx:id="shoppingTabImage" fitHeight="50.0" fitWidth="132.0" layoutX="7.0" layoutY="4.0" onMouseClicked="#onShoppingTabSelect" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@Res/Images/handla_tab_clicked.png" />
-                                 </image>
-                              </ImageView>
-                              <ImageView fx:id="orderTabImage" fitHeight="50.0" fitWidth="115.0" layoutX="144.0" layoutY="4.0" onMouseClicked="#onOrderTabSelect" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@Res/Images/order_tab.png" />
-                                 </image>
-                              </ImageView>
-                              <ImageView fx:id="listTabImage" fitHeight="58.0" fitWidth="156.0" layoutX="267.0" layoutY="4.0" onMouseClicked="#onListtabSelect" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@Res/Images/inkopslistor_tab.png" />
-                                 </image>
-                              </ImageView>
-                              <ImageView fx:id="myPageTabImage" fitHeight="49.0" fitWidth="143.0" layoutX="433.0" layoutY="4.0" onMouseClicked="#onMyPageTabSelect" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@Res/Images/min_sida_tab.png" />
-                                 </image>
-                              </ImageView>
+                              <Button layoutX="5.0" layoutY="3.0" mnemonicParsing="false" onMouseClicked="#onShoppingTabSelect" prefHeight="50.0" prefWidth="132.0" styleClass="tabButtons" text="Handla">
+                                 <graphic>
+                                    <ImageView fitHeight="37.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@Res/Images/shoppingCart.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Button>
+                              <Button layoutX="140.0" layoutY="3.0" mnemonicParsing="false" onMouseClicked="#onOrderTabSelect" prefHeight="50.0" prefWidth="115.0" styleClass="tabButtons" text="Ordar">
+                                 <graphic>
+                                    <ImageView fitHeight="37.0" fitWidth="32.0" onMouseClicked="#onOrderTabSelect" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@Res/Images/Order.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Button>
+                              <Button layoutX="258.0" layoutY="3.0" mnemonicParsing="false" onMouseClicked="#onListtabSelect" prefHeight="50.0" prefWidth="169.0" styleClass="tabButtons" text="Inköpslistor">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                                 <graphic>
+                                    <ImageView fitHeight="37.0" fitWidth="32.0" onMouseClicked="#onOrderTabSelect" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@Res/Images/inkopslistor.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                              <Button layoutX="431.0" layoutY="3.0" mnemonicParsing="false" onMouseClicked="#onMyPageTabSelect" prefHeight="50.0" prefWidth="132.0" styleClass="tabButtons" text="Min sida">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                                 <graphic>
+                                    <ImageView fitHeight="37.0" fitWidth="32.0" onMouseClicked="#onOrderTabSelect" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@Res/Images/min_sida.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
                            </children>
                         </Pane>
                      </children>
